Changes to product page

--- a/HomePage.html
+++ b/HomePage.html
@@ -27,7 +27,7 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="#">Frozen food</a>
+            <a  onclick="window.location.href='ProductsFrozen.html'">Frozen food</a>
             <a href="#">Pharmacy</a>
             <a onclick="window.location.href='Products.html'">Grocery</a>
             <a href="#">Household</a>
@@ -71,47 +71,12 @@
     </div>
     </div>
 
-    <!-- Promotion Slideshow -->
-<!--    <div data-role="main" class="ui-content">-->
-<!--        <div id="promo_slides" class="carousel slide" data-ride="carousel">-->
-
-<!--            &lt;!&ndash; Indicators &ndash;&gt;-->
-<!--            <ul class="carousel-indicators">-->
-<!--                <li data-target="#promo_slides" data-slide-to="0" class="active"></li>-->
-<!--                <li data-target="#promo_slides" data-slide-to="1"></li>-->
-<!--                <li data-target="#promo_slides" data-slide-to="2"></li>-->
-<!--&lt;!&ndash;                <li data-target="#promo_slides" data-slide-to="3"></li>&ndash;&gt;-->
-<!--            </ul>-->
-
-<!--            &lt;!&ndash; The slideshow &ndash;&gt;-->
-<!--            <div class="carousel-inner slides">-->
-<!--                <div class="carousel-item active slides">-->
-<!--                    <img src="images/products.jpg" alt="promo 1"  style="max-width:600px;height:auto;">-->
-<!--                </div>-->
-<!--                <div class="carousel-item slides">-->
-<!--                    <img src="images/best%20promo.png" alt="promo 2"  style="max-width:600px;height:auto;">-->
-<!--                </div>-->
-<!--                <div class="carousel-item slides">-->
-<!--                    <img src="images/no%20fakes.PNG" alt="promo 3" style="max-width:600px;height:auto;">-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            &lt;!&ndash; Left and right controls &ndash;&gt;-->
-<!--            <a class="carousel-control-prev" href="#demo" data-slide="prev">-->
-<!--                <span class="carousel-control-prev-icon"></span>-->
-<!--            </a>-->
-<!--            <a class="carousel-control-next" href="#demo" data-slide="next">-->
-<!--                <span class="carousel-control-next-icon"></span>-->
-<!--            </a>-->
-<!--        </div>-->
-<!--    </div>-->
-
     <!-- Categories -->
     <div data-role="main" class="ui-content">
         <p id="category_title"><b> CATEGORIES </b></p>
         <div class="categories_menu">
-            <span class="fas fa-ice-cream fa-3x circle-icon"></span>
-            <span class="fas fa-notes-medical fa-3x circle-icon"> </span>
+            <span class="fas fa-ice-cream fa-3x circle-icon" onclick="window.location.href='ProductsFrozen.html'"></span>
+            <span class="fas fa-notes-medical fa-3x circle-icon" > </span>
             <span class="fas fa-shopping-bag fa-3x circle-icon" onclick="window.location.href='Products.html'"></span>
             <span class="fas fa-chair fa-3x circle-icon"></span>
             <span class="fas fa-glass-martini-alt fa-3x circle-icon"></span>
@@ -266,12 +231,12 @@
             <p id="services_title"><b> WHAT WE OFFER </b></p>
         </div>
         <div class="w3-col l3 m6 w3-light-blue w3-container w3-padding-16">
-            <h3>Qulity Prodcuts</h3>
+            <h3>The Best Qulity Prodcuts</h3>
             <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
 
         <div class="w3-col l3 m6 w3-orange w3-container w3-padding-16">
-            <h3>The Best Prices</h3>
+            <h3>The Best Prices for all</h3>
             <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
         </div>
 
@@ -288,7 +253,8 @@
 
     <!--    Footer Section-->
     <div class="page-footer-class" id="page-footer-id">
-        <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+        <hr>
+
         <!-- Footer -->
         <footer class="pt-5 pb-4" id="contact">
             <div class="container">
