--- a/Login.html
+++ b/Login.html
@@ -91,6 +91,90 @@
 		</div>
 	</section>
 
+    <!--    Footer Section-->
+    <div class="page-footer-class" id="page-footer-id">
+    <hr>
+
+        <!-- Footer -->
+        <footer class="pt-5 pb-4" id="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
+                        <h5 class="mb-4">ABOUT US</h5>
+                        <ul class="f-address">
+                            <li>
+                                <div class="row">
+                                    <div class="col-1"><i class="fas fa-map-marker"></i></div>
+                                    <div class="col-10">
+                                        <p class="mb-3">50/B,MAIN ST,COLOMBO</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-1"><i class="far fa-envelope"></i></div>
+                                    <div class="col-10">
+                                        <p class="mb-3">ShopMo1234@Gmail.com</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="row">
+                                    <div class="col-1"><i class="fas fa-phone-volume"></i></div>
+                                    <div class="col-10">
+                                        <p class="mb-3">+94 77 605 3412</p>
+
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
+                        <h5 class="mb-4">SERVICES</h5>
+                        <p class="mb-3">DELIVERY AND RETURNS</p>
+                        <p class="mb-3">PRIVACY POLICY</p>
+                        <p class="mb-3">TERMS AND CONDITIONS</p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
+                        <h5 class="mb-4">INFORMATION</h5>
+                        <p class="mb-3">ABOUT US</p>
+                        <p class="mb-3">CONTACT US</p>
+                        <p class="mb-3">SHOPMO ON MOBILE</p>
+                    </div>
+
+                    <div class="col-lg-3 col-md-6 col-sm-6 mt-2 mb-4">
+                        <h5 class="mb-4">CONNECT WITH US</h5>
+                        <div class="input-group" style="text-align: center">
+                            <img src="images/shopmologo.png" width="55%"  style="margin-left: 70px">
+                        </div>
+                        <div align="center">
+                            <ul class="social-pet mt-4" style="margin-right: 40px">
+                                <li><a href="#" title="facebook"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="#" title="google-plus"><i class="fab fa-google-plus-g"></i></a></li>
+                                <li><a href="#" title="instagram"><i class="fab fa-instagram"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Copyright -->
+            <section class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 ">
+                            <div class="text-center text-white">
+                                &copy; 2019 ShopMo. All Rights Reserved.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </footer>
+    </div>
+
     <!-- Bottom Navigation -->
     <div data-role="footer" style="text-align:center;" data-position="fixed">
         <div data-role="navbar" id="bottom_nav">
