--- a/ProductsFrozen.html
+++ b/ProductsFrozen.html
@@ -29,7 +29,7 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-            <a href="#">Frozen food</a>
+            <a  onclick="window.location.href='ProductsFrozen.html'">Frozen food</a>
             <a href="#">Pharmacy</a>
             <a onclick="window.location.href='Products.html'">Grocery</a>
             <a href="#">Household</a>
@@ -67,7 +67,7 @@
     <!-- Promotion Content -->
     <div data-role="main" class="ui-content">
         <div>
-            <p id="homeDelivery_title"><b>Grocery</b></p>
+            <p id="homeDelivery_title"><b>Frozen Food</b></p>
             <br>
         </div>
         <button class="btn warning hide" id="login-btn">FILTER PROMO ITEMS</button>
@@ -80,8 +80,8 @@
                     <div class="col-md-6 col-lg-4 col-xl-3 ">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/rice.jpg" alt="" onclick="window.location.href='RiceProductPage.html'">
-                                <span class="product-id">992</span>
+                                <img class="card-img" src="images/icecreamvanila.jpg" alt="" onclick="window.location.href='RiceProductPage.html'">
+                                <span class="product-id">9992</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -89,7 +89,7 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5 class="product-title">Daawat Basmati Rice</h5>
+                                <h5 class="product-title">Ice Cream</h5>
                                 <p class = "promo-item-text"><b>LKR 500.00</b></p>
                                 <p class ="promo-off">10% Off</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
@@ -124,8 +124,8 @@
                     <div class="col-md-6 col-lg-4 col-xl-3 c1">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/milk.jpeg" alt="">
-                                <span class="product-id">993</span>
+                                <img class="card-img" src="images/CIC.jpg" alt="">
+                                <span class="product-id">9993</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -133,7 +133,7 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5 class="product-title">Anchor Milk 5kg</h5>
+                                <h5 class="product-title">CIC Chicken</h5>
                                 <p class = "item-text"><b>LKR 600.00</b></p>
                                 <p class ="promo-off">Best Price</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
@@ -168,8 +168,8 @@
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/noodles.jpg" alt="">
-                                <span class="product-id">994</span>
+                                <img class="card-img" src="images/keives.jpg" alt="">
+                                <span class="product-id">9994</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -177,8 +177,8 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5 class="product-title">Magee Noodles 200g</h5>
-                                <p class = "promo-item-text"><b>LKR 100.00</b></p>
+                                <h5 class="product-title">keives</h5>
+                                <p class = "promo-item-text"><b>LKR 400.00</b></p>
                                 <p class ="promo-off">10% Off</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
                                     <col width="50">
@@ -212,8 +212,8 @@
                     <div class="col-md-6 col-lg-4 col-xl-3  c1">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/pringles.jfif" alt="">
-                                <span class="product-id">995</span>
+                                <img class="card-img" src="images/KotmaleMozerella.jpg" alt="">
+                                <span class="product-id">9995</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -221,8 +221,8 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5 class="product-title">Pringles 300g</h5>
-                                <p class = "item-text"><b>LKR 600.00</b></p>
+                                <h5 class="product-title">Kotmale Moz Cheese</h5>
+                                <p class = "item-text"><b>LKR 900.00</b></p>
                                 <p class ="promo-off">Best Price</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
                                     <col width="50">
@@ -256,8 +256,8 @@
                     <div class="col-md-6 col-lg-4 col-xl-3 c1">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/sugar.jpg" alt="">
-                                <span class="product-id">996</span>
+                                <img class="card-img" src="images/Icecreamchoco.jpg" alt="">
+                                <span class="product-id">9996</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -265,8 +265,8 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5 class="product-title">Sugar 500g</h5>
-                                <p class = "item-text"><b>LKR 150.90</b></p>
+                                <h5 class="product-title">Ice Cream Choco</h5>
+                                <p class = "item-text"><b>LKR 300.90</b></p>
                                 <p class ="promo-off">Best Price</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
                                     <col width="50">
@@ -300,8 +300,8 @@
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/sauce.jpg" alt="">
-                                <span class="product-id">997</span>
+                                <img class="card-img" src="images/fries.jfif" alt="">
+                                <span class="product-id">9997</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -309,8 +309,8 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
-                                <h5>Heinz Ketchup 500ml</h5>
-                                <p class = "promo-item-text"><b>LKR 800.00</b></p>
+                                <h5>French Fries</h5>
+                                <p class = "promo-item-text"><b>LKR 600.00</b></p>
                                 <p class ="promo-off">10% Off</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
                                     <col width="50">
@@ -344,8 +344,8 @@
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/chili.jfif" alt="">
-                                <span class="product-id">998</span>
+                                <img class="card-img" src="images/eggo.jfif" alt="">
+                                <span class="product-id">9998</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
@@ -353,8 +353,8 @@
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
-                                <h5 class="product-title">Chilly 71g</h5>
-                                <p class = "promo-item-text"><b>LKR 70.00</b></p>
+                                <h5 class="product-title">Eggos</h5>
+                                <p class = "promo-item-text"><b>LKR 500.00</b></p>
                                 <p class ="promo-off">10% Off</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
                                     <col width="50">
@@ -389,7 +389,7 @@
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
                                 <img class="card-img" src="images/kitkat.jpg" alt="">
-                                <span class="product-id">999</span>
+                                <span class="product-id">9999</span>
                             </div>
                             <div>
                                 <span class="fa fa-star checked"></span>
