Changes to QR page

--- a/IceCreamProductPage.html
+++ b/IceCreamProductPage.html
@@ -82,17 +82,17 @@
 
                     <div class="w3-white w3-text-grey w3-card -4">
                         <div class="w3-container">
-                            <h2 class="product-title">Daawat Rice 1Kg</h2>
-                            <span class="product-id">992</span>
+                            <h2 class="product-title">Ice Cream</h2>
+                            <span class="product-id">9992</span>
 
-                            <img class="card-img" src="images/rice.jpg" style="width:100%" alt="Avatar">
+                            <img class="card-img" src="images/Icecreamvanila.jpg" style="width:100%" alt="Avatar">
                         </div>
                         <div class="w3-container">
                             <hr>
                             <table style="width: 100%">
                                 <tr>
                                     <td>
-                                        <h4 class="promo-item-text">LKR 500.00</h4>
+                                        <h4 class="promo-item-text">LKR 400.00</h4>
                                         <p class ="promo-off">10% Off</p>
 
                                     </td>
@@ -159,7 +159,7 @@
 
                     <div class="w3-container w3-card w3-white w3-margin-bottom">
                         <h3 class="product-title">Description</h3>
-                        <p id="category-text"><span>Category</span> : Grocery</a></p>
+                        <p id="category-text"><span>Category</span> : Frozen Food</a></p>
                         <p id="availability-text"><span>Availibility</span> : In Stock</a></p>
                         <br>
 
