--- a/ProductsFrozen.html
+++ b/ProductsFrozen.html
@@ -80,7 +80,7 @@
                     <div class="col-md-6 col-lg-4 col-xl-3 ">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/icecreamvanila.jpg" alt="" onclick="window.location.href='RiceProductPage.html'">
+                                <img class="card-img" src="images/icecreamvanila.jpg" alt="" onclick="window.location.href='IceCreamProductPage.html'">
                                 <span class="product-id">9992</span>
                             </div>
                             <div>
@@ -90,7 +90,7 @@
                                 <span class="fa fa-star unchecked"></span>
                                 <span class="fa fa-star unchecked"></span>
                                 <h5 class="product-title">Ice Cream</h5>
-                                <p class = "promo-item-text"><b>LKR 500.00</b></p>
+                                <p class = "promo-item-text"><b>LKR 400.00</b></p>
                                 <p class ="promo-off">10% Off</p>
                                 <table class="quantity-table" align="center" style="text-align: left">
                                     <col width="50">
@@ -168,7 +168,7 @@
                     <div class="col-md-6 col-lg-4 col-xl-3">
                         <div class="card text-center card-product products">
                             <div class="card-product__img">
-                                <img class="card-img" src="images/keives.jpg" alt="">
+                                <img class="card-img" src="images/keives.jpg" alt="" onclick="window.location.href='KeivesProductPage.html'">
                                 <span class="product-id">9994</span>
                             </div>
                             <div>
