--- a/Promotions.html
+++ b/Promotions.html
@@ -22,7 +22,7 @@
 <body style="background-color: white">
 
 
-<div data-role="page" >
+<div data-role="page" style="background-image: url('images/promobackground.jpg')" >
 
     <!--    Categories-->
     <div id="myNav" class="overlay">
