--- a/qr.html
+++ b/qr.html
@@ -38,13 +38,14 @@
 		<div class="container h-100">
 			<div class="blog-banner">
 				<div class="text-center">
-					<h1>QR Scanner</h1>
-					<nav aria-label="breadcrumb" class="banner-breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#">Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">QR Scanner</li>
-            </ol>
-          </nav>
+                    <h2 id="qr_title"><b>QR Scanner</b></h2>
+                    <br>
+<!--					<nav aria-label="breadcrumb" class="banner-breadcrumb">-->
+<!--            <ol class="breadcrumb">-->
+<!--              <li class="breadcrumb-item"><a href="#">Home</a></li>-->
+<!--              <li class="breadcrumb-item active" aria-current="page">QR Scanner</li>-->
+<!--            </ol>-->
+<!--          </nav>-->
 				</div>
 			</div>
     </div>
@@ -81,6 +82,11 @@
 			</div>
 		</div>
 	</section>
+
+    <div class="login_form_inner">
+            <h3>Want to earn more Points?</h3>
+            <button class="btn info shop-item-button" id="game-btn" onclick="window.location.href='gamee.html'">Play Game</button>
+    </div>
  <script type="text/javascript">
 
                 // // var coins = JSON.parse(localStorage.getItem('coins'));
